# pokemon_arena

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.rs  host_key.pem  pokemon_arena.service
scripts/: generate_menu.py  generate_menu.sh
src/: client_handler.rs  main.rs  serde_handler.rs
src/menus/: README.md  auth_menu.rs  menu_system.rs  mod.rs
src/pokemon/: mod.rs  pokemon_by_number.json  pokemon_indexer.rs  pokemon_stats.json
src/ui/: input_handler.rs  mod.rs  renderer.rs
src/ui/states/: help.rs  main_menu.rs  mod.rs  pokedex.rs  settings.rs
src/ui_tooling/: text_input.rs
src/user_management/: email_auth.rs
users/: testplayer.json  testuser.json
