[package]
name = "pokemon_arena"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core ratatui library for building terminal user interfaces
ratatui = "0.27.0"

# Terminal backend for ratatui - handles raw terminal mode, input, and output
crossterm = "0.28.0"

# Error handling library that provides better error types and backtraces
anyhow = "1.0"

# Async runtime for handling concurrent operations
tokio = { version = "1.0", features = ["full"] }

# Serialize and Deserialize jsons
serde = "1.0"
serde_json = "1.0"
