[package]
name = "pokemon_arena"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core ratatui library for building terminal user interfaces
ratatui = "0.29.0"

# Terminal backend for ratatui - handles raw terminal mode, input, and output
crossterm = "0.28.0"

# Error handling library that provides better error types and backtraces
anyhow = "1.0"

# Async runtime for handling concurrent operations
tokio = { version = "1.0", features = ["full"] }

# Serialize and Deserialize jsons
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation for verification codes
rand = "0.8"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Simple Quitting
quit = "2.0.0"

# Text input widget
rat-text = "1.0.5"
color-eyre = "0.6.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
